third_party/move/move-compiler-v2/tests/checking/typing/assign_wrong_arity.exp

Diagnostics:
error: tuple type `()` is not allowed as a local variable type
  ┌─ tests/checking/typing/assign_wrong_arity.move:5:13
  │
5 │         let x;
  │             ^
  │
  = required by declaration of local `x`

error: tuple type `(integer, integer, integer)` is not allowed as a local variable type
  ┌─ tests/checking/typing/assign_wrong_arity.move:5:13
  │
5 │         let x;
  │             ^
  │
  = required by declaration of local `x`

error: cannot assign `integer` to left-hand side of type `()`
  ┌─ tests/checking/typing/assign_wrong_arity.move:8:9
  │
8 │         () = 0;
  │         ^^

error: the left-hand side has 3 items but the right-hand side provided 4
   ┌─ tests/checking/typing/assign_wrong_arity.move:11:9
   │
11 │         (x, b, R{f}) = (0, false, R{f: 0}, R{f: 0});
   │         ^^^^^^^^^^^^

error: the left-hand side has 3 items but the right-hand side provided 2
   ┌─ tests/checking/typing/assign_wrong_arity.move:12:9
   │
12 │         (x, b, R{f}) = (0, false);
   │         ^^^^^^^^^^^^
